# ChangeLog for x11-misc/xbatt
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xbatt/ChangeLog,v 1.15 2013/02/02 18:19:30 ulm Exp $

  02 Feb 2013; Ulrich Müller <ulm@gentoo.org> xbatt-1.2.1-r1.ebuild:
  Fix LICENSE, see COPYRIGHT file, bug 452966.

  17 Feb 2012; Jeroen Roovers <jer@gentoo.org> -xbatt-1.2.1.ebuild:
  Old.

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> xbatt-1.2.1-r1.ebuild:
  x86 stable wrt bug #397277

  03 Feb 2012; Brent Baude <ranger@gentoo.org> xbatt-1.2.1-r1.ebuild:
  Marking xbatt-1.2.1-r1 ppc for bug 397277

*xbatt-1.2.1-r1 (28 Aug 2010)

  28 Aug 2010; Kacper Kowalik <xarthisius@gentoo.org>
  +xbatt-1.2.1-r1.ebuild, +files/xbatt-1.2.1-implicits.patch:
  Respect CC,CFLAGS,LDFLAGS wrt bug 334965. Thanks to Diego for the report.
  Fix implicit functions declarations. Keyword on ~amd64.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; xbatt-1.2.1.ebuild:
  Drop virtual/x11 references.

  21 Sep 2006; Krzysiek Pawlik <nelchael@gentoo.org> xbatt-1.2.1.ebuild:
  Fix bug #148492 - missing dependency on imake.

  21 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> xbatt-1.2.1.ebuild:
  Fixed DEPEND for modular X.

  01 Nov 2004; Michael Sterrett <mr_bones_@gentoo.org> xbatt-1.2.1.ebuild:
  fix LICENSE; tidy

  08 Aug 2004; Tom Martin <slarti@gentoo.org> xbatt-1.2.1.ebuild:
  Typo in DESCRIPTION: indicataor -> indicator. Bug 59717.

  14 Jun 2004; <pyrania@gentoo.org> xbatt-1.2.1.ebuild:
  Added IUSE.

  11 Apr 2004; Markus Nigbur <pyrania@gentoo.org> xbatt-1.2.1.ebuild:
  Ebuild fixups.

*xbatt-1.2.1 (18 Nov 2003)

  18 Nov 2003; Ian Leitch <port001@gentoo.org> xbatt-1.2.1.ebuild:
  Moved from app-misc to x11-misc, metadata.xml created

*xbatt-1.2.1 (1 Feb 2002)

  26 Mar 2003; Graham Forest <vladimir@gentoo.org> xbatt-1.2.1.ebuild:
  Automated cleanup of LICENSE

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  