@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install prepare
+DEPEND=x11-libs/libX11 x11-libs/libXmu x11-libs/libXt x11-libs/libXaw x11-libs/libXext x11-libs/libxkbfile x11-libs/libXpm x11-proto/xextproto x11-misc/imake
+DESCRIPTION=Notebook battery indicator for X
+EAPI=2
+HOMEPAGE=http://www.clave.gr.jp/~eto/xbatt/
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=xbatt
+RDEPEND=x11-libs/libX11 x11-libs/libXmu x11-libs/libXt x11-libs/libXaw x11-libs/libXext x11-libs/libxkbfile x11-libs/libXpm
+SLOT=0
+SRC_URI=http://www.clave.gr.jp/~eto/xbatt/xbatt-1.3pr1.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=6fa788d88e27f4b659f91f83c6df7d64
